; ModuleID = '/home/carl/AnghaBench/linux/sound/usb/extr_midi.c_snd_usbmidi_out_urb_complete.c'
source_filename = "/home/carl/AnghaBench/linux/sound/usb/extr_midi.c_snd_usbmidi_out_urb_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.urb = type { i64, %struct.out_urb_context* }
%struct.out_urb_context = type { %struct.snd_usb_midi_out_endpoint* }
%struct.snd_usb_midi_out_endpoint = type { i32, i32, %struct.TYPE_2__*, i32, i32, %struct.out_urb_context* }
%struct.TYPE_2__ = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@ERROR_DELAY_JIFFIES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.urb*)* @snd_usbmidi_out_urb_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_usbmidi_out_urb_complete(%struct.urb* %0) #0 {
  %2 = alloca %struct.urb*, align 8
  %3 = alloca %struct.out_urb_context*, align 8
  %4 = alloca %struct.snd_usb_midi_out_endpoint*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.urb* %0, %struct.urb** %2, align 8
  %8 = load %struct.urb*, %struct.urb** %2, align 8
  %9 = getelementptr inbounds %struct.urb, %struct.urb* %8, i32 0, i32 1
  %10 = load %struct.out_urb_context*, %struct.out_urb_context** %9, align 8
  store %struct.out_urb_context* %10, %struct.out_urb_context** %3, align 8
  %11 = load %struct.out_urb_context*, %struct.out_urb_context** %3, align 8
  %12 = getelementptr inbounds %struct.out_urb_context, %struct.out_urb_context* %11, i32 0, i32 0
  %13 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %12, align 8
  store %struct.snd_usb_midi_out_endpoint* %13, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %14 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %15 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %14, i32 0, i32 3
  %16 = load i64, i64* %6, align 8
  %17 = call i32 @spin_lock_irqsave(i32* %15, i64 %16)
  %18 = load %struct.out_urb_context*, %struct.out_urb_context** %3, align 8
  %19 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %20 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %19, i32 0, i32 5
  %21 = load %struct.out_urb_context*, %struct.out_urb_context** %20, align 8
  %22 = ptrtoint %struct.out_urb_context* %18 to i64
  %23 = ptrtoint %struct.out_urb_context* %21 to i64
  %24 = sub i64 %22, %23
  %25 = sdiv exact i64 %24, 8
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %5, align 4
  %27 = load i32, i32* %5, align 4
  %28 = shl i32 1, %27
  %29 = xor i32 %28, -1
  %30 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %31 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = and i32 %32, %29
  store i32 %33, i32* %31, align 8
  %34 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %35 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = call i64 @unlikely(i32 %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %50

39:                                               ; preds = %1
  %40 = load i32, i32* %5, align 4
  %41 = shl i32 1, %40
  %42 = xor i32 %41, -1
  %43 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %44 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = and i32 %45, %42
  store i32 %46, i32* %44, align 4
  %47 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %48 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %47, i32 0, i32 4
  %49 = call i32 @wake_up(i32* %48)
  br label %50

50:                                               ; preds = %39, %1
  %51 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %52 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %51, i32 0, i32 3
  %53 = load i64, i64* %6, align 8
  %54 = call i32 @spin_unlock_irqrestore(i32* %52, i64 %53)
  %55 = load %struct.urb*, %struct.urb** %2, align 8
  %56 = getelementptr inbounds %struct.urb, %struct.urb* %55, i32 0, i32 0
  %57 = load i64, i64* %56, align 8
  %58 = icmp slt i64 %57, 0
  br i1 %58, label %59, label %80

59:                                               ; preds = %50
  %60 = load %struct.urb*, %struct.urb** %2, align 8
  %61 = call i32 @snd_usbmidi_urb_error(%struct.urb* %60)
  store i32 %61, i32* %7, align 4
  %62 = load i32, i32* %7, align 4
  %63 = icmp slt i32 %62, 0
  br i1 %63, label %64, label %79

64:                                               ; preds = %59
  %65 = load i32, i32* %7, align 4
  %66 = load i32, i32* @ENODEV, align 4
  %67 = sub nsw i32 0, %66
  %68 = icmp ne i32 %65, %67
  br i1 %68, label %69, label %78

69:                                               ; preds = %64
  %70 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %71 = getelementptr inbounds %struct.snd_usb_midi_out_endpoint, %struct.snd_usb_midi_out_endpoint* %70, i32 0, i32 2
  %72 = load %struct.TYPE_2__*, %struct.TYPE_2__** %71, align 8
  %73 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %72, i32 0, i32 0
  %74 = load i64, i64* @jiffies, align 8
  %75 = load i64, i64* @ERROR_DELAY_JIFFIES, align 8
  %76 = add nsw i64 %74, %75
  %77 = call i32 @mod_timer(i32* %73, i64 %76)
  br label %78

78:                                               ; preds = %69, %64
  br label %83

79:                                               ; preds = %59
  br label %80

80:                                               ; preds = %79, %50
  %81 = load %struct.snd_usb_midi_out_endpoint*, %struct.snd_usb_midi_out_endpoint** %4, align 8
  %82 = call i32 @snd_usbmidi_do_output(%struct.snd_usb_midi_out_endpoint* %81)
  br label %83

83:                                               ; preds = %80, %78
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @wake_up(i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @snd_usbmidi_urb_error(%struct.urb*) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @snd_usbmidi_do_output(%struct.snd_usb_midi_out_endpoint*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
